🚀 Major Application Enhancements: Address Caching & Database Sync
✨ Key Features Implemented:
• Sophisticated address data caching system with hierarchical per-ID storage
• Intelligent localStorage capacity monitoring and resource management
• Indonesian phone number formatting with visual feedback (62 prefix)
• Real-time form validation with comprehensive error handling
• Enhanced database triggers for automatic max_date tracking

🔧 Technical Improvements:
• AddressCacheTest with localStorage reliability checks
• Hierarchical caching: provinces → regencies → districts → villages
• Cache-first strategy with database fallback
• Form validation for Indonesian standards (phone, NPWP, business entities)
• Memory management with 80% capacity limits

📊 Database & Sync:
• Exported complete alamat_db_with_data.sql (address database)
• Exported complete koperasi_db_with_data.sql (business database)
• Updated database sync instructions for multi-computer development
• Comprehensive knowledge transfer package for new developers

📚 Documentation:
• ADDRESS_CACHING_STRATEGY.md - detailed caching implementation
• KNOWLEDGE_TRANSFER_PACKAGE.md - complete setup guide
• .windsurfrc - Windsurf project configuration
• Updated README and project documentation

🧪 Quality Assurance:
• Comprehensive testing scripts for all major features
• Browser cache compatibility testing
• localStorage reliability validation
• Cross-environment development support

🗑️ Cleanup:
• Removed obsolete database files (alamat_db.sql, koperasi_db_export.sql)
• Removed unused schema files (schema_core.sql, users.sql)
• Organized documentation structure

This commit brings the application to production-ready state with advanced caching, validation, and developer experience improvements.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "KSP-PEB",
-  "short_name": "KSP-PEB",
+  "name": "ksp_mono",
+  "short_name": "ksp_mono",
   "lang": "id",
-  "description": "Sistem Informasi Koperasi Simpan Pinjam KSP-PEB",
+  "description": "Sistem Informasi Koperasi Simpan Pinjam ksp_mono",
   "start_url": "/ksp_mono/public/",
   "display": "standalone",
   "background_color": "#ffffff",
